// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/slider/demo/IconSlider.js correctly test 1`] = `
<div
  class="icon-wrapper"
>
  <i
    class="jcicon jcicon-frown-o "
    style="color:rgba(0, 0, 0, .45)"
  />
  <div
    class="jc-slider"
  >
    <div
      class="jc-slider-rail"
    />
    <div
      class="jc-slider-track"
      style="left:0%;width:0%"
    />
    <div
      class="jc-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="20"
      aria-valuemin="0"
      aria-valuenow="0"
      class="jc-slider-handle"
      role="slider"
      style="left:0%"
      tabindex="0"
    />
    <div
      class="jc-slider-mark"
    />
  </div>
  <i
    class="jcicon jcicon-smile-o "
    style="color:"
  />
</div>
`;

exports[`renders ./components/slider/demo/InputNumber.js correctly test 1`] = `
<div>
  <div
    class="jc-row"
  >
    <div
      class="jc-col-12"
    >
      <div
        class="jc-slider"
      >
        <div
          class="jc-slider-rail"
        />
        <div
          class="jc-slider-track"
          style="left:0%;width:0%"
        />
        <div
          class="jc-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="20"
          aria-valuemin="1"
          aria-valuenow="1"
          class="jc-slider-handle"
          role="slider"
          style="left:0%"
          tabindex="0"
        />
        <div
          class="jc-slider-mark"
        />
      </div>
    </div>
    <div
      class="jc-col-4"
    >
      <div
        class="jc-input-number"
        style="margin-left:16px"
      >
        <div
          class="jc-input-number-handler-wrap"
        >
          <span
            aria-disabled="false"
            aria-label="Increase Value"
            class="jc-input-number-handler jc-input-number-handler-up "
            role="button"
            unselectable="unselectable"
          >
            <span
              class="jc-input-number-handler-up-inner"
              unselectable="unselectable"
            />
          </span>
          <span
            aria-disabled="true"
            aria-label="Decrease Value"
            class="jc-input-number-handler jc-input-number-handler-down jc-input-number-handler-down-disabled"
            role="button"
            unselectable="unselectable"
          >
            <span
              class="jc-input-number-handler-down-inner"
              unselectable="unselectable"
            />
          </span>
        </div>
        <div
          aria-valuemax="20"
          aria-valuemin="1"
          aria-valuenow="1"
          class="jc-input-number-input-wrap"
          role="spinbutton"
        >
          <input
            autocomplete="off"
            class="jc-input-number-input"
            max="20"
            min="1"
            step="1"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="jc-row"
  >
    <div
      class="jc-col-12"
    >
      <div
        class="jc-slider"
      >
        <div
          class="jc-slider-rail"
        />
        <div
          class="jc-slider-track"
          style="left:0%;width:0%"
        />
        <div
          class="jc-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="1"
          aria-valuemin="0"
          aria-valuenow="0"
          class="jc-slider-handle"
          role="slider"
          style="left:0%"
          tabindex="0"
        />
        <div
          class="jc-slider-mark"
        />
      </div>
    </div>
    <div
      class="jc-col-4"
    >
      <div
        class="jc-input-number"
        style="margin-left:16px"
      >
        <div
          class="jc-input-number-handler-wrap"
        >
          <span
            aria-disabled="false"
            aria-label="Increase Value"
            class="jc-input-number-handler jc-input-number-handler-up "
            role="button"
            unselectable="unselectable"
          >
            <span
              class="jc-input-number-handler-up-inner"
              unselectable="unselectable"
            />
          </span>
          <span
            aria-disabled="true"
            aria-label="Decrease Value"
            class="jc-input-number-handler jc-input-number-handler-down jc-input-number-handler-down-disabled"
            role="button"
            unselectable="unselectable"
          >
            <span
              class="jc-input-number-handler-down-inner"
              unselectable="unselectable"
            />
          </span>
        </div>
        <div
          aria-valuemax="1"
          aria-valuemin="0"
          aria-valuenow="0"
          class="jc-input-number-input-wrap"
          role="spinbutton"
        >
          <input
            autocomplete="off"
            class="jc-input-number-input"
            max="1"
            min="0"
            step="0.01"
            value="0.00"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/slider/demo/TipFormatter.js correctly test 1`] = `
<div>
  <div
    class="jc-slider"
  >
    <div
      class="jc-slider-rail"
    />
    <div
      class="jc-slider-track"
      style="left:0%;width:0%"
    />
    <div
      class="jc-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="jc-slider-handle"
      role="slider"
      style="left:0%"
      tabindex="0"
    />
    <div
      class="jc-slider-mark"
    />
  </div>
  <div
    class="jc-slider"
  >
    <div
      class="jc-slider-rail"
    />
    <div
      class="jc-slider-track"
      style="left:0%;width:0%"
    />
    <div
      class="jc-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="jc-slider-handle"
      role="slider"
      style="left:0%"
      tabindex="0"
    />
    <div
      class="jc-slider-mark"
    />
  </div>
</div>
`;

exports[`renders ./components/slider/demo/basic.js correctly test 1`] = `
<div>
  <div
    class="jc-slider"
  >
    <div
      class="jc-slider-rail"
    />
    <div
      class="jc-slider-track"
      style="left:0%;width:30%"
    />
    <div
      class="jc-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="30"
      class="jc-slider-handle"
      role="slider"
      style="left:30%"
      tabindex="0"
    />
    <div
      class="jc-slider-mark"
    />
  </div>
  <div
    class="jc-slider"
  >
    <div
      class="jc-slider-rail"
    />
    <div
      class="jc-slider-track jc-slider-track-1"
      style="left:20%;width:30%"
    />
    <div
      class="jc-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      class="jc-slider-handle jc-slider-handle-1"
      role="slider"
      style="left:20%"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="jc-slider-handle jc-slider-handle-2"
      role="slider"
      style="left:50%"
      tabindex="0"
    />
    <div
      class="jc-slider-mark"
    />
  </div>
  Disabled: 
  <span
    class="jc-switch-small jc-switch"
    tabindex="0"
  >
    <span
      class="jc-switch-inner"
    />
  </span>
</div>
`;

exports[`renders ./components/slider/demo/event.js correctly test 1`] = `
<div>
  <div
    class="jc-slider"
  >
    <div
      class="jc-slider-rail"
    />
    <div
      class="jc-slider-track"
      style="left:0%;width:30%"
    />
    <div
      class="jc-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="30"
      class="jc-slider-handle"
      role="slider"
      style="left:30%"
      tabindex="0"
    />
    <div
      class="jc-slider-mark"
    />
  </div>
  <div
    class="jc-slider"
  >
    <div
      class="jc-slider-rail"
    />
    <div
      class="jc-slider-track jc-slider-track-1"
      style="left:20%;width:30%"
    />
    <div
      class="jc-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      class="jc-slider-handle jc-slider-handle-1"
      role="slider"
      style="left:20%"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="jc-slider-handle jc-slider-handle-2"
      role="slider"
      style="left:50%"
      tabindex="0"
    />
    <div
      class="jc-slider-mark"
    />
  </div>
</div>
`;

exports[`renders ./components/slider/demo/mark.js correctly test 1`] = `
<div>
  <div
    class="jc-slider jc-slider-with-marks"
  >
    <div
      class="jc-slider-rail"
    />
    <div
      class="jc-slider-track"
      style="left:0%;width:37%"
    />
    <div
      class="jc-slider-step"
    >
      <span
        class="jc-slider-dot jc-slider-dot-active"
        style="left:0%"
      />
      <span
        class="jc-slider-dot jc-slider-dot-active"
        style="left:26%"
      />
      <span
        class="jc-slider-dot jc-slider-dot-active"
        style="left:37%"
      />
      <span
        class="jc-slider-dot"
        style="left:100%"
      />
    </div>
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="37"
      class="jc-slider-handle"
      role="slider"
      style="left:37%"
      tabindex="0"
    />
    <div
      class="jc-slider-mark"
    >
      <span
        class="jc-slider-mark-text jc-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:0%"
      >
        0°C
      </span>
      <span
        class="jc-slider-mark-text jc-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:26%"
      >
        26°C
      </span>
      <span
        class="jc-slider-mark-text jc-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:37%"
      >
        37°C
      </span>
      <span
        class="jc-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:100%;color:#f50"
      >
        <strong>
          100°C
        </strong>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/slider/demo/vertical.js correctly test 1`] = `
<div
  style="height:300px"
>
  <div
    style="float:left;height:300px;margin-left:70px"
  >
    <div
      class="jc-slider jc-slider-vertical"
    >
      <div
        class="jc-slider-rail"
      />
      <div
        class="jc-slider-track"
        style="bottom:0%;height:30%"
      />
      <div
        class="jc-slider-step"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="30"
        class="jc-slider-handle"
        role="slider"
        style="bottom:30%"
        tabindex="0"
      />
      <div
        class="jc-slider-mark"
      />
    </div>
  </div>
  <div
    style="float:left;height:300px;margin-left:70px"
  >
    <div
      class="jc-slider jc-slider-vertical"
    >
      <div
        class="jc-slider-rail"
      />
      <div
        class="jc-slider-track jc-slider-track-1"
        style="bottom:20%;height:30%"
      />
      <div
        class="jc-slider-step"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        class="jc-slider-handle jc-slider-handle-1"
        role="slider"
        style="bottom:20%"
        tabindex="0"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="jc-slider-handle jc-slider-handle-2"
        role="slider"
        style="bottom:50%"
        tabindex="0"
      />
      <div
        class="jc-slider-mark"
      />
    </div>
  </div>
  <div
    style="float:left;height:300px;margin-left:70px"
  >
    <div
      class="jc-slider jc-slider-with-marks jc-slider-vertical"
    >
      <div
        class="jc-slider-rail"
      />
      <div
        class="jc-slider-track jc-slider-track-1"
        style="bottom:26%;height:11%"
      />
      <div
        class="jc-slider-step"
      >
        <span
          class="jc-slider-dot"
          style="bottom:0%"
        />
        <span
          class="jc-slider-dot jc-slider-dot-active"
          style="bottom:26%"
        />
        <span
          class="jc-slider-dot jc-slider-dot-active"
          style="bottom:37%"
        />
        <span
          class="jc-slider-dot"
          style="bottom:100%"
        />
      </div>
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="26"
        class="jc-slider-handle jc-slider-handle-1"
        role="slider"
        style="bottom:26%"
        tabindex="0"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="37"
        class="jc-slider-handle jc-slider-handle-2"
        role="slider"
        style="bottom:37%"
        tabindex="0"
      />
      <div
        class="jc-slider-mark"
      >
        <span
          class="jc-slider-mark-text"
          style="margin-bottom:-50%;bottom:0%"
        >
          0°C
        </span>
        <span
          class="jc-slider-mark-text jc-slider-mark-text-active"
          style="margin-bottom:-50%;bottom:26%"
        >
          26°C
        </span>
        <span
          class="jc-slider-mark-text jc-slider-mark-text-active"
          style="margin-bottom:-50%;bottom:37%"
        >
          37°C
        </span>
        <span
          class="jc-slider-mark-text"
          style="margin-bottom:-50%;bottom:100%;color:#f50"
        >
          <strong>
            100°C
          </strong>
        </span>
      </div>
    </div>
  </div>
</div>
`;
